# aura

./: .gitignore  Anchor.toml  Cargo.toml  README.md
programs/aura-core/: Cargo.toml
programs/aura-core/src/: constants.rs  lib.rs  program_error.rs  program_events.rs
programs/aura-core/src/audit/: event.rs  mod.rs  trail.rs
programs/aura-core/src/cpi/: mod.rs
programs/aura-core/src/errors/: mod.rs  treasury.rs
programs/aura-core/src/execution/: executor.rs  message.rs  mod.rs
programs/aura-core/src/ext_cpi/: dwallet.rs  encrypt.rs  mod.rs
programs/aura-core/src/governance/: mod.rs  multisig.rs  override_proposal.rs
programs/aura-core/src/instructions/: cancel_pending.rs  collect_override_signature.rs  configure_confidential_guardrails.rs  configure_confidential_vector_guardrails.rs  configure_multisig.rs  configure_swarm.rs  confirm_policy_decryption.rs  create_treasury.rs  execute_pending.rs  finalize_execution.rs  mod.rs  pause_execution.rs  propose_confidential_transaction.rs  propose_confidential_vector_transaction.rs  propose_override.rs  propose_transaction.rs  register_dwallet.rs  request_policy_decryption.rs
programs/aura-core/src/program_accounts/: mod.rs
programs/aura-core/src/state/: agent_treasury.rs  confidential.rs  deployment.rs  dwallet.rs  fees.rs  mod.rs  pending.rs  receipt.rs  reputation.rs  swarm.rs
programs/aura-core/src/tests/: advanced_flow.rs  confidential_flow.rs  governance_flow.rs  mod.rs  proposal_flow.rs
programs/aura-policy/: Cargo.toml
programs/aura-policy/src/: lib.rs
programs/aura-policy/src/config/: limits.rs  mod.rs  reputation.rs
programs/aura-policy/src/context/: evaluation.rs  mod.rs  transaction.rs
programs/aura-policy/src/decision/: mod.rs  policy_decision.rs  rule_outcome.rs
programs/aura-policy/src/engine/: batch.rs  evaluator.rs  mod.rs
programs/aura-policy/src/graphs/: advanced.rs  batch.rs  confidential.rs  mod.rs  spec.rs  transaction.rs
programs/aura-policy/src/helpers/: bitmap.rs  math.rs  mod.rs  state.rs  time.rs
programs/aura-policy/src/state/: mod.rs  policy_state.rs
programs/aura-policy/src/tests/: advanced_rules.rs  confidential_rules.rs  engine_rules.rs  mod.rs  time_and_velocity.rs
programs/aura-policy/src/types/: chain.rs  mod.rs  transaction.rs
programs/aura-policy/src/violations/: mod.rs
smoke/: sync-vendor.ps1  sync-vendor.sh
smoke/aura-devnet/: Cargo.toml
smoke/aura-devnet/src/: confidential.rs  dwallet.rs  lib.rs  policy.rs
